<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skydiving Altimeter</string>
    
    <string name="settings">Settings</string>
    <string name="list">List</string>
    <string name="info">Info</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_list">List</string>
    <string name="action_delete">Delete</string>
    
    <string name="default_value">0.00</string>
    
    <string name="settings_measurement_units">Measurement units</string>
    <string name="settings_units_metric">Metric (km)</string>
    <string name="settings_units_imperial">Imperial (ft)</string>
    
    <string name="settings_personal">Personal</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_fall">Fall</string>
    <string name="settings_climb">Climb</string>
    
    <string name="settings_vibration">Vibration</string>
    <string name="settings_sound">Sound</string>
    
    <string name="settings_first_altitude">First altitude</string>
    <string name="settings_second_altitude">Second altitude</string>
    <string name="settings_third_altitude">Third altitude</string>
    
    <string name="settings_silent">Silent</string>
    
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    
    <string name="m">m</string>
    <string name="ft">ft</string>
    
    <string name="first_altitude_fall">2000</string>
    <string name="second_altitude_fall">1300</string>
    <string name="third_altitude_fall">800</string>
    <string name="first_altitude_climb">300</string>
    <string name="second_altitude_climb">3500</string>
    
    <string name="btn_left">&lt;</string>
    <string name="btn_right">&gt;</string>
    <string name="btn_set_zero">Set zero</string>
    
    <string name="live">Live</string>
    
    <string name="empty_list">No items</string>
    <string name="message_on_exit">Press Back button again to exit</string>
    
    <string name="action_calibrate">Calibrate</string>

</resources>