<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_personal" >
        <ListPreference
            android:defaultValue="@string/settings_units_metric"
            android:dialogTitle="@string/settings_measurement_units"
            android:entries="@array/measurement_units_options"
            android:entryValues="@array/measurement_units_values"
            android:key="lUnits"
            android:summary="@string/settings_units_metric"
            android:title="@string/settings_measurement_units" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_notifications" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cbVibration"
            android:title="@string/settings_vibration" />

        <RingtonePreference
            android:key="rSound"
            android:ringtoneType="all"
            android:showDefault="false"
            android:showSilent="true"
            android:title="@string/settings_sound" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_climb" >
        <EditTextPreference
            android:defaultValue="300"
            android:inputType="number"
            android:key="etFirstAltitudeClimb"
            android:title="@string/settings_first_altitude" />
        <EditTextPreference
            android:defaultValue="3500"
            android:dependency="etFirstAltitudeClimb"
            android:inputType="number"
            android:key="etSecondAltitudeClimb"
            android:title="@string/settings_second_altitude" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_fall" >
        <EditTextPreference
            android:defaultValue="@string/first_altitude_fall"
            android:inputType="number"
            android:key="etFirstAltitudeFall"
            android:title="@string/settings_first_altitude" />
        <EditTextPreference
            android:defaultValue="@string/second_altitude_fall"
            android:dependency="etFirstAltitudeFall"
            android:inputType="number"
            android:key="etSecondAltitudeFall"
            android:title="@string/settings_second_altitude" />
        <EditTextPreference
            android:defaultValue="@string/third_altitude_fall"
            android:dependency="etSecondAltitudeFall"
            android:inputType="number"
            android:key="etThirdAltitudeFall"
            android:title="@string/settings_third_altitude" />
    </PreferenceCategory>

</PreferenceScreen>