<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnIncrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSetToZero"
        android:layout_toRightOf="@+id/btnSetToZero"
        android:layout_marginLeft="20dp"
        android:text="@string/btn_right" />

    <Button
        android:id="@+id/btnSetToZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/btn_set_zero" />

    <Button
        android:id="@+id/btnDecrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSetToZero"
        android:layout_toLeftOf="@+id/btnSetToZero"
        android:layout_marginRight="20dp"
        android:text="@string/btn_left" />
    
</RelativeLayout>